
*  Thu Jul 24 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>  - 1.4.0
   -  Changed the MLP neural network configuration method, renamed files "mlp_netarch.conf" and "mlp_netweights.dat" to 
      "mlp_training.conf" and "mlp_nnet.dat" respectively
   -  Improved the information included by "mlp_nnet.dat", Added a contructor for MLPNetProvider so that the MLPTester and 
      MLPPredictor only need to use mlp_nnet.dat for neural network initialization
   -  Many other codes changes related to the variation of MLPNetProvider
   
*  Mon Jul 21 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Fixed a memory leek bug in MLPIFlytekDataProvider.cpp that "labelRecord" is not released in ::readOneSentence()
   -  Fixed a memory leek bug in MLPTester.cpp that "OutVector" is not released in ::SingleTesting()
   -  Some other misc changes of the codes

*  Mon Jul 14 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>  
   -  Update the iflytek_test.cpp, add iflytek_training2() which has been leeked from previous submmit

*  Fri Jul 11 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>  -  1.3.0
   -  Fixed a bug with the SinglePredicting() interface of MLPPredictor  
   -  Added the SingleTesting() interface for MLPTester to support single frame based MLP validating
   -  Added a MLP version string to MLPCommon.cpp

*  Thu Jul 03 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Added support to store the weights of MLP neural network in Little Endian bytes sequence

*  Tue Jul 01 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Replaced the MLPDataProvider's implementation of batch buffers from double-buffer to a buffer ring (eg. 8 buffers), more
      number of buffers will let the IO of the back-end data provider be completely hidden by the batch processing of the trainer.  

*  Fri Jun 27 2014  Qianfeng Zhang <qfzhanglinux@gmail.com>
   -  Fixed a bug in gotoLabelFrame() of MLPMNistDataProvider()