@@ -77,7 +77,8 @@ public:
 	LIBMLPAPI MLPNetProvider();
     LIBMLPAPI MLPNetProvider(int layers, int dimensions[], bool DoInitialize=false);
     LIBMLPAPI MLPNetProvider(MLP_NETTYPE type, int layers, int dimensions_[], float etas_[], float momentum_, ACT_FUNC actFuncs_[], COST_FUNC costFunc_, bool DoInitialize);
-    LIBMLPAPI MLPNetProvider(const char *dir, const char *trainingConfigFile, const char *nnetDataFile);   // used for the MLPTrainer
+    LIBMLPAPI MLPNetProvider(const char *dir, const char *trainingConfigFile, const char *nnetDataFile);   // initialized weights from the file
+	LIBMLPAPI MLPNetProvider(const char *dir, const char *trainingConfigFile, bool DoInitialize);     // using randomly initialized weights
 
 	LIBMLPAPI MLPNetProvider(const char *dir, const char *nnetDataFile);   // used for the MLPTester and MLPPredictor
 
