@@ -170,6 +170,8 @@ void MLPTester::_initialize(MLPNetProvider & provider, int _batchSize)
 
 	this->target = clCreateBuffer(this->CLContext->m_context, CL_MEM_READ_WRITE, sizeof(cl_float)*this->dimensions[this->nLayers-1]*this->batchSize,NULL,&status);
 	CL_CHECK(status);
+
+    CL_CHECK( clFinish(this->CLContext->m_cmd_queues[0]) );
 }
 
 
