@@ -4,11 +4,11 @@
 	<File name="include/MLPApiExport.h" open="0" top="0" tabpos="22">
 		<Cursor position="256" topLine="0" />
 	</File>
-	<File name="include/MLPChkPointState.h" open="0" top="0" tabpos="21">
-		<Cursor position="925" topLine="6" />
+	<File name="include/MLPChkPointState.h" open="1" top="0" tabpos="8">
+		<Cursor position="925" topLine="0" />
 	</File>
-	<File name="include/MLPChkPointingMgr.h" open="0" top="0" tabpos="18">
-		<Cursor position="372" topLine="33" />
+	<File name="include/MLPChkPointingMgr.h" open="1" top="0" tabpos="9">
+		<Cursor position="372" topLine="40" />
 	</File>
 	<File name="include/MLPCommon.h" open="0" top="0" tabpos="1">
 		<Cursor position="2832" topLine="39" />
@@ -17,7 +17,7 @@
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="include/MLPDataProvider.h" open="1" top="0" tabpos="5">
-		<Cursor position="220" topLine="5" />
+		<Cursor position="3983" topLine="85" />
 	</File>
 	<File name="include/MLPIFlyDataProvider.h" open="0" top="0" tabpos="25">
 		<Cursor position="3682" topLine="53" />
@@ -53,37 +53,37 @@
 		<Cursor position="19926" topLine="600" />
 	</File>
 	<File name="lib-cpps/MLPChkPointingMgr.cpp" open="1" top="0" tabpos="3">
-		<Cursor position="338" topLine="0" />
+		<Cursor position="243" topLine="271" />
 	</File>
 	<File name="lib-cpps/MLPCommon.cpp" open="1" top="0" tabpos="6">
 		<Cursor position="339" topLine="0" />
 	</File>
 	<File name="lib-cpps/MLPDataProvider.cpp" open="1" top="0" tabpos="4">
-		<Cursor position="592" topLine="24" />
+		<Cursor position="592" topLine="402" />
 	</File>
 	<File name="lib-cpps/MLPIflyDataProvider.cpp" open="0" top="0" tabpos="16">
 		<Cursor position="11794" topLine="383" />
 	</File>
-	<File name="lib-cpps/MLPMNistDataProvider.cpp" open="0" top="0" tabpos="7">
-		<Cursor position="13960" topLine="422" />
+	<File name="lib-cpps/MLPMNistDataProvider.cpp" open="1" top="0" tabpos="11">
+		<Cursor position="13960" topLine="417" />
 	</File>
-	<File name="lib-cpps/MLPNetProvider.cpp" open="1" top="1" tabpos="2">
+	<File name="lib-cpps/MLPNetProvider.cpp" open="1" top="0" tabpos="2">
 		<Cursor position="10658" topLine="306" />
 	</File>
-	<File name="lib-cpps/MLPPredictor.cpp" open="0" top="0" tabpos="3">
-		<Cursor position="6617" topLine="230" />
+	<File name="lib-cpps/MLPPredictor.cpp" open="1" top="0" tabpos="7">
+		<Cursor position="5671" topLine="16" />
 	</File>
 	<File name="lib-cpps/MLPSimpleDataProvider.cpp" open="0" top="0" tabpos="29">
 		<Cursor position="6045" topLine="167" />
 	</File>
 	<File name="lib-cpps/MLPTester.cpp" open="1" top="0" tabpos="1">
-		<Cursor position="7955" topLine="155" />
+		<Cursor position="6207" topLine="161" />
 	</File>
-	<File name="lib-cpps/MLPTrainer.cpp" open="0" top="0" tabpos="4">
-		<Cursor position="18290" topLine="455" />
+	<File name="lib-cpps/MLPTrainer.cpp" open="1" top="0" tabpos="12">
+		<Cursor position="9138" topLine="451" />
 	</File>
-	<File name="lib-cpps/MLPTraining.cpp" open="0" top="0" tabpos="12">
-		<Cursor position="12253" topLine="259" />
+	<File name="lib-cpps/MLPTraining.cpp" open="0" top="0" tabpos="8">
+		<Cursor position="7953" topLine="241" />
 	</File>
 	<File name="lib-cpps/MLPUtil.cpp" open="0" top="0" tabpos="28">
 		<Cursor position="299" topLine="98" />
