@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <CodeBlocks_layout_file>
 	<ActiveTarget name="Release" />
-	<File name="test-cpps/iflytek_test.cpp" open="1" top="0" tabpos="3">
-		<Cursor position="6656" topLine="331" />
+	<File name="test-cpps/iflytek_test.cpp" open="0" top="0" tabpos="3">
+		<Cursor position="8246" topLine="348" />
 	</File>
-	<File name="test-cpps/mnist_test.cpp" open="1" top="0" tabpos="2">
-		<Cursor position="5224" topLine="155" />
+	<File name="test-cpps/mnist_test.cpp" open="1" top="0" tabpos="1">
+		<Cursor position="9206" topLine="266" />
 	</File>
-	<File name="test-cpps/simple_test.cpp" open="1" top="0" tabpos="4">
-		<Cursor position="4341" topLine="128" />
+	<File name="test-cpps/simple_test.cpp" open="0" top="0" tabpos="4">
+		<Cursor position="4341" topLine="126" />
 	</File>
-	<File name="test-cpps/test_main.cpp" open="1" top="0" tabpos="1">
-		<Cursor position="878" topLine="10" />
+	<File name="test-cpps/test_main.cpp" open="1" top="1" tabpos="2">
+		<Cursor position="1111" topLine="32" />
 	</File>
 </CodeBlocks_layout_file>
